<resources>
    <string name="app_name">SpeechEase</string>


    <string name="sign_up">Sign-up</string>
    <string name="full_name">Full Name</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="your_email_id">Email ID</string>

    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="input_error_email_invalid">enter a valid email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>

    <string name="add">ADD</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="email_id">EMAIL ID</string>
    <string name="send">send</string>
    <string name="password">Password </string>
    <string name="contact_number">Contact Number</string>
    <string name="you_will_recieve_an_otp">You will recieve an OTP</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="haven_t_signed_up">Haven\'t Signed Up?</string>
    <string name="update">UPDATE</string>
    <string name="changev">Change Voice</string>

    <string name="type_a_message">Type a message</string>
    <string name="profile">Settings</string>
    <string name="name">Name</string>
    <string name="emailid">Email</string>
    <string name="gender">Gender</string>
    <string name="check_email">Check Email</string>
    <string name="enter_the_otp">Enter The OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">verify</string>
    <string name="we_have_sent_the_link_to_your_e_mail_please_verify_and_get_back_to_us">We have sent the link to your E-mail,Please Verify and get back to us.</string>
    <string name="hey_what_are_the_options_in_menu">Hey, what are the options in menu</string>
    <string name="text_to_speech">Text-to-speech</string>
    <string name="templates">Templates</string>
    <string name="emoji_speech">Emoji speech</string>
    <string name="log_out">Log-out</string>
    <string name="pre_defined">Template Categories</string>
    <string name="sender_message_display_here">Sender Message Display Here</string>
    <string name="shopping" translatable="false">Shopping</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_template">Add Template</string>
    <string name="empty">Name is empty</string>
    <string name="tempname">Template Name</string>
    <string name="back">Press back again to exit</string>
    <string name="check">Please Check your Registered Email</string>
    <string name="network">No Network Connection</string>
    <string name="edit_temp">Edit Template</string>
    <string name="already">Already Logged In</string>
    <string name="exist">User with this phone number already exists</string>
    <string name="required">Password Required</string>
    <string name="characters">Password should be least 6 characters long</string>
    <string name="match">Password does not match the given criteria</string>
    <string name="ph">Please Enter Your Phone Number</string>
    <string name="updated">Updated</string>

    <string name="field">Fields Are Empty!</string>
    <string name="wrong">Something went wrong!!</string>

    <string name="not_verify">Email not verified</string>
    <string name="pu">Profile Updated</string>
    <string name="error_later">Error,Please try again later</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <string name="english">English</string>
    <string name="french">Française</string>
    <string name="clear">Clear</string>
    <string name="click">Click Here</string>
    <string name="ttsSettings">Change Preferred Speech Engine</string>
    <string name="registration_success">Registration Successful.</string>

    <string name="h">I am happy</string>
    <string name="s">I am sad</string>
    <string name="l">I am laughing</string>
    <string name="a">I am angry</string>
    <string name="atbest">All the Best</string>
    <string name="e">Wow! I am so excited</string>
    <string name="li">I love it</string>
    <string name="t">I am thinking</string>
    <string name="sic">I am sick</string>
    <string name="tire">I am so tired</string>

    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="laugh">Laugh</string>
    <string name="angry">Angry</string>
    <string name="atb">All the Best</string>
    <string name="excited">Excited</string>
    <string name="like">Like</string>
    <string name="think">Think</string>
    <string name="sick">Sick</string>
    <string name="tired">Tired</string>
    <string name="Play">Play</string>
    <string name="important_information">Important Information</string>
    <string name="info_tts">Make sure the default Text to speech engine is selected as Google Speech Service. To change, click on button provided under "Change Preferred Speech Engine" and then click on "Preferred Engine" and select the "Speech Services By Google" option.</string>
    <string name="info_voice">To change the voice, click on the button provided under "Change Voice" option and for English go to "English(United States)" and for French go to "French(France)" option.</string>
    <string name="pre_defined_next">Text templates</string>

</resources>