<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn_grd_style"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_alignParentTop="true"


        android:id="@+id/layo"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"

            android:textSize="24sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/layo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_background"
        android:padding="20dp"

        android:weightSum="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"

            >

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"

                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/full_name"
                        android:textColor="#000"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/your_name"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="#000"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/email"
                        android:textColor="#000"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/your_email_id"
                        android:textColor="#000"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/password"
                        android:textColor="#000"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"



                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:textSize="18sp"

                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:textColor="#000"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:hint="**********"
                            android:fontFamily="@font/montserrat"
                            android:textColorHint="#808080"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/contact_number"
                        android:textColor="#000"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:weightSum="3"
                        android:orientation="horizontal">
                        <com.hbb20.CountryCodePicker
                            android:layout_width="0dp"
                            android:id="@+id/ccp"
                            android:layout_weight="1"
                            android:gravity="center"
                            app:ccp_textSize="16sp"
                            app:ccp_areaCodeDetectedCountry="true"

                            app:ccp_showNameCode="true"
                            android:layout_height="match_parent"/>


                        <EditText
                            android:id="@+id/cnumber"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:hint="@string/you_will_recieve_an_otp"

                            />



                    </LinearLayout>



                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="-36dp"
            android:layout_above="@id/bottom_layout"
            android:gravity="end"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/go"
                android:elevation="6dp"
                android:background="@drawable/btn_gradient_style"
                android:text="@string/register"
                android:textColor="@color/white"
                />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:id="@+id/text0"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginBottom="16dp"
                android:layout_centerInParent="true"
                android:text="@string/already_registered"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/btn_signin"
                android:textColor="#fff"
                android:fontFamily="@font/montserrat"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/btn_gradient_style"
                android:layout_below="@id/text0"
                android:layout_centerHorizontal="true"

                />


        </RelativeLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:indeterminateDrawable="@drawable/cpb_4"
        android:layout_height="wrap_content" />



</RelativeLayout>