<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_centerInParent="true"
    android:layout_height="wrap_content"
    tools:context=".profile_activity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <RelativeLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"

                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/upda_prof_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card1"
                    android:layout_centerInParent="true"
                    android:text="@string/update" />

                <TextView
                    android:id="@+id/title_001"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/profile"
                    android:textAlignment="center"/>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:cardCornerRadius="10dp"
                    android:id="@+id/card1"
                    android:elevation="8dp"
android:layout_below="@id/title_001"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="6dp">
                    <LinearLayout
                        android:weightSum="2"

                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <RelativeLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            android:fontFamily="@font/montserrat"
                            android:paddingHorizontal="20dp"
                            android:paddingVertical="12dp">



                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/name_title"
                                    android:gravity="center|start"
                                    android:fontFamily="@font/montserrat"
                                    android:textColor="#000"
                                    android:text="@string/name"
                                    android:textStyle="bold"
                                    android:textSize="18sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/name_title"
                                android:gravity="center|start"
                                android:id="@+id/name_profile"
                                android:fontFamily="@font/montserrat"
                                android:textColor="#000"
                                android:text=""

                                android:textSize="18sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/email_title"
                                android:layout_below="@+id/name_profile"
                                android:gravity="center|start"
                                android:fontFamily="@font/montserrat"
                                android:textColor="#000"
                                android:text="@string/emailid"
                                android:textStyle="bold"
                                android:textSize="18sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/email_title"
                                android:gravity="center|start"
                                android:id="@+id/email_profile"
                                android:fontFamily="@font/montserrat"
                                android:textColor="#000"
                                android:text=""

                                android:textSize="18sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/contact"
                                android:layout_below="@+id/email_profile"
                                android:gravity="center|start"
                                android:fontFamily="@font/montserrat"
                                android:textColor="#000"
                                android:text="@string/contact_number"
                                android:textStyle="bold"
                                android:textSize="18sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/contact"
                                android:gravity="center|start"
                                android:id="@+id/conta"
                                android:fontFamily="@font/montserrat"
                                android:textColor="#000"
                                android:text=""

                                android:textSize="18sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/gender_title"
                                android:gravity="center|start"
                                android:layout_below="@id/conta"
                                android:fontFamily="@font/montserrat"
                                android:textColor="#000"
                                android:text="@string/gender"
                                android:textStyle="bold"
                                android:textSize="18sp" />
                            <Spinner
                                android:layout_width="wrap_content"

                                android:layout_height="wrap_content"
                                android:layout_below="@id/gender_title"
                                android:spinnerMode="dropdown"
                                android:id="@+id/spinner_languages"
                                />





                        </RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>








            </RelativeLayout>


        </LinearLayout>
]


</RelativeLayout>